Add session counter, which displays after first session ends.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <div>
+      <p id="counter"></p>
+    </div>
     <div class="center">
       <p id="time-display"></p>
       <button id="start-button">Let's do this!</button>
